# eSFML

./: .gitignore  README.md  mix.exs
lib/SFML/: CMakeLists.txt  SFML.sln  SFML.vcxproj  toutf8.bat
lib/SFML/Audio/: Audio.cpp  Audio.ex  Audio.vcxproj  CMakeLists.txt  ReadMe.txt  eAudioNIF.cpp  eMusic.cpp  eMusic.h  eSound.cpp  eSound.h  eSoundBuffer.cpp  eSoundBuffer.h  music.ex  sound.ex  soundbuffer.ex  stdafx.cpp  stdafx.h
lib/SFML/Graphics/: CMakeLists.txt  Graphics.ex  Graphics.vcxproj  ReadMe.txt  VertexDeque.cpp  VertexDeque.h  circleshape.ex  convexshape.ex  dllmain.cpp  eCircleShape.cpp  eCircleShape.h  eColor.h  eConvexShape.cpp  eConvexShape.h  eDrawable.h  eEvent.cpp  eEvent.h  eFont.cpp  eFont.h  eGraphicsNIF.cpp  eRectangleShape.cpp  eRectangleShape.h  eRenderWindow.cpp  eRenderWindow.h  eSprite.cpp  eSprite.h  eText.cpp  eText.h  eTexture.cpp  eTexture.h  eTransformable.cpp  eTransformable.h  eVertex.cpp  eVertex.h  eVertexDeque.cpp  eVertexDeque.h  font.ex  module.lst  rect.ex  rectangleshape.ex  (+8 more)
lib/SFML/Main/: Main.cpp  Main.vcxproj  ReadMe.txt  dllmain.cpp  stdafx.cpp
lib/SFML/System/: CMakeLists.txt  ReadMe.txt  System.ex  System.vcxproj  clock.ex  eClock.cpp  eClock.h  eSystemNIF.cpp  stdafx.cpp  vector2.ex
lib/SFML/System/Win32/: EventFlagImpl.hpp
lib/SFML/Window/: CMakeLists.txt  ReadMe.txt  Window.ex  Window.h  Window.vcxproj  eWindowNIF.cpp  stdafx.cpp
lib/SFML/misc/: CMakeLists.txt  ErlNifEx.h  EventFlag.cpp  EventFlag.hpp  NifRes.h
lib/SFML/misc/Unix/: EventFlagImpl.cpp  EventFlagImpl.hpp
lib/SFML/misc/Win32/: EventFlagImpl.cpp
(+29 files in other folders)
